--- a/src/components/services/services.module.css
+++ b/src/components/services/services.module.css
@@ -7,6 +7,7 @@
   gap: var(--space-3xl);
   flex-grow: 1;
   width: 100%;
+  overflow: hidden;
 }
 
 .servicesInfo {
@@ -172,8 +173,8 @@
   }
 
   .serviceText {
-    flex-direction: row;
-    justify-content: space-between;
+    /* flex-direction: row; */
+    /* justify-content: space-between; */
     /* justify-content: flex-start; */
     align-items: flex-start;
     gap: var(--space-lg);
@@ -184,9 +185,18 @@
     gap: var(--space-md);
   }
 
+  .serviceNumber {
+    flex: 0 0 auto;
+  }
+
   .serviceName {
     flex-basis: auto;
     margin-bottom: var(--space-sm);
+  }
+
+  .serviceDeliverables {
+    flex: 0 1 auto;
+    align-self: flex-end;
   }
 
   .deliverable {
